# echo

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT_MGMT_ANALYSIS.md  DATA.md  DESIGN.md  Dockerfile  INSTALL.md  README.md  RUNBOOK.md  SETUP.md  TODOS.md  annotations.example.yaml  detect.py  docker-compose.yml  embed.py  embed_common.py  enrich.py  enrich_spotify.py  ingest.py  metadata.yaml  pyproject.toml  query.py  reflect.py  requirements.txt  run.bat  run.sh  signals.py  viewer.py
.github/workflows/: publish.yml  smoke.yml
api/: constants.py  db.py  llm.py  main.py  observability.py  vec.py
api/routers/: chapters.py  chat.py  diff.py  insights.py  search.py  speak.py  timeline.py
api/tools/: __init__.py  clustering_tool.py  compressors.py  pelt_tool.py  python_tool.py  search_tool.py  sql_tool.py  web_search_tool.py  youtube_tool.py
docs/: ARCHITECTURE.md  DATA.md  RUNBOOK.md
src/echo/: __init__.py  config.py
src/echo/cli/: __init__.py  main.py  migrate.py  serve.py  view_reflections.py  wizard.py
src/echo/data/: __init__.py  paths.py
src/echo/pipeline/: __init__.py  detect.py  embed.py  enrich.py  enrich_music_meta.py  enrich_spotify.py  ingest.py  reflect.py  signals.py
src/echo/ui/: .gitkeep
tests/: conftest.py  fixtures.py  test_cli_music_meta.py  test_compressors.py  test_config.py  test_diff_prompt.py  test_embed_spotify_tracks.py  test_enrich_music_meta.py  test_enrich_spotify.py  test_enrich_videos.py  test_ist_filter.py  test_llm_routing.py  test_migrate.py  test_pipeline_integration.py  test_prompt_caching.py  test_score_finding.py  test_serve.py  test_speak_response.py  test_tools.py  test_trim_history_integration.py  test_validate_findings.py
ui/: README.md  package-lock.json  svelte.config.js  vite.config.ts
ui/src/: app.html
ui/src/lib/: CostFooter.svelte  DiffView.svelte  RoundPillStrip.svelte  SearchResult.svelte  SessionCard.svelte  SourceChip.svelte  SpeakView.svelte  TimelineCard.svelte  fmt.ts
ui/src/routes/: +layout.ts  +page.svelte
