[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-archaeology"
version = "0.1.0"
description = "Personal data archaeology — analyze your own YouTube + Spotify + Calendar history locally with an autonomous AI agent."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aditya Arya" }]
keywords = ["personal-data", "youtube", "spotify", "takeout", "data-analysis", "agent", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  # CLI
  "typer>=0.12.0",
  # Pipeline core
  "sqlite-utils>=3.35",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  # Detection + analysis
  "ruptures>=1.1.9",
  "scikit-learn>=1.4.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.0",
  # External integrations
  "google-api-python-client>=2.130.0",
  "icalendar>=5.0.0",
  "duckduckgo-search>=6.0.0",
  # Vector store + embeddings
  "lancedb>=0.30.0",
  # LLM providers
  "openai>=1.30.0",
  "anthropic>=0.40.0",
  # Observability (optional at runtime; import-guarded in api/observability.py)
  "langfuse>=2.0.0",
  # API + UI server
  "fastapi[all]>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  # Datasette browser (optional but shipped with run.bat / run.sh)
  "datasette>=0.64",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
echo = "echo.cli.main:app"

[project.urls]
# Homepage / Source not yet set — repo is local-only until V2 publishes to PyPI.

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

[tool.hatch.build.targets.sdist]
include = [
  "src/echo",
  "LICENSE",
  "pyproject.toml",
  "CLAUDE.md",
  "AGENTS.md",
  "DATA.md",
  "RUNBOOK.md",
  "SETUP.md",
  "TODOS.md",
  "annotations.example.yaml",
  "metadata.yaml",
  ".env.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
